syntax = "proto3";

package hedera_721;

option java_package = "com.hedera.hashgraph.seven_twenty_one.proto";
option java_multiple_files = true;

// void transferFrom(address from, address to, uint id)
message TransferFromFunctionData {
  bytes from = 1; // <Address>
  bytes to = 2; // <Address>
  bytes id = 3; // <BigInteger>
}
